k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webpage-deployment
  namespace: webpage
spec:
  selector:
    matchLabels:
      app: webpage
      replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: webpage
    spec:
      containers:
      - name: webpage
        image: 885491079534.dkr.ecr.us-east-2.amazonaws.com/webpage:number
        ports:
        - containerPort: 80
