k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webpage-svc
  namespace: webpage
spec:
  selector:
    app: webpage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
